Fixed alignments and images on contact and homepage

--- a/css/styles.css
+++ b/css/styles.css
@@ -442,11 +442,15 @@ label {
 }
 
 @media only screen and (min-width: 992px) {
+  body {
+    min-height: 100vh;
+    max-width: 960px;
+  }
   nav {
     padding: 30px 0;
   }
   footer {
-    padding: 50px 0 30px 0;
+    padding: 75px 0 30px 0;
   }
   .nav-right {
     padding: 0;
@@ -492,12 +496,15 @@ label {
     padding: 0;
   }
   .hide-mobile {
-    display: contents;
+    display: flex;
   }
   .profile-img img {
-    height: 18vw;
-    width: 16vw;
+    height: 22vw;
+    width: 20vw;
+    max-width: 300px;
+    max-height: 330px;
     grid-column: 2;
+    margin-left: 1.75vw;
   }
   .profile-header {
     grid-column: 4 / span 8;
@@ -528,20 +535,26 @@ label {
     grid-row: 2;
     height: 15vw;
     width: 32vw;
-    margin-top: 4vw;
+    max-width: 400px;
+    max-height: 200px;
   }
   .blocjams-section {
     grid-column: 7 / span 4;
     grid-row: 3;
     width: 32vw;
     height: 15vw;
+    max-width: 400px;
+    max-height: 200px;
     margin-top: 4vw;
+    margin-left: 3vw;
   }
   .responsive-site-section {
     grid-column: 1 / span 5;
     grid-row: 4;
     width: 32vw;
     height: 15vw;
+    max-width: 400px;
+    max-height: 200px;
     margin-top: 4vw;
   }
 
@@ -554,10 +567,12 @@ label {
   .cumulus-section img {
     height: 20vw;
     width: 28vw;
+    max-width: 348px;
+    max-height: 248px;
     grid-column: 2;
     grid-row: 1;
-    margin-left: 4vw;
-    margin-top: -6vw;
+    margin-left: 40px;
+    margin-top: -20px;
   }
 
   .cumulus-section h5 {
@@ -570,10 +585,12 @@ label {
   .blocjams-section img {
     height: 16vw;
     width: 28vw;
+    max-width: 348px;
+    max-height: 199px;
     grid-column: 2;
     grid-row: 1;
-    margin-left: 7vw;
-    margin-top: -17vw;
+    margin-left: 100px;
+    margin-top: -220px;
   }
 
   .blocjams-section h5 {
@@ -585,10 +602,12 @@ label {
   .responsive-site-section img {
     height: 16vw;
     width: 22vw;
+    max-width: 273px;
+    max-height: 199px;
     grid-column: 2;
     grid-row: 1;
-    margin-left: 9vw;
-    margin-top: -17vw;
+    margin-left: 100px;
+    margin-top: -225px;
   }
 
   .responsive-site-section h5 {
@@ -634,7 +653,7 @@ label {
     padding: 4vw 2vw;
   }
   .contact-info {
-    grid-column: 4 / span 3;
+    grid-column: 4 / span 6;
     grid-row: 1;
     padding-left: 2vw;
   }
@@ -654,9 +673,9 @@ label {
     padding-bottom: 1vw;
   }
   #contact-wrap {
-    width: 40vw;
+    width: 100%;
     background-color: #F0F1F4;
-    grid-column: 4 / span 2;
+    grid-column: 4 / span 8;
     grid-row: 2;
     padding: 2vw 1vw 2vw 0;
   }
